# Minimum-bounding-box

./: .gitignore  CMakeLists.txt  README.md  convhull_3d.h  main.cpp  mbb.cpp  mbb.h
shaders/: Fragment.shader  Vertex.shader
utility/: controls.cpp  controls.h  loadobj.cpp  loadobj.h  loadshaders.cpp  loadshaders.h
